Fixing pin datta e2e
Bruh
