# backend/server.js
@@ -92,7 +92,7 @@ app.get('/api/data', async (req, res, next) => {
 // Create additional modules and delegate to their exports.
 app.post('/api/v0/login', auth.login);
 app.get('/api/v0/posts', posts.getPosts);
-app.post('/api/v0/posts', posts.createPost);
+app.post('/api/v0/posts', auth.authenticate, posts.createPost);
 app.get('/api/v0/groups', auth.authenticate, groups.getGroups);
 app.get('/api/v0/groups/:id/posts', auth.authenticate, groups.getGroupPosts);
 
